# nephthys

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  entrypoint.sh  manifest.yml  piccolo_conf.py  pyproject.toml
.github/workflows/: codeql.yml
docs/: api.md  contributing.md  deployment.md
nephthys/: __main__.py  piccolo_app.py
nephthys/actions/: assign_category_tag.py  assign_question_tag.py  assign_tag.py  assign_team_tag.py  create_category_tag.py  create_question_tag.py  create_tag.py  create_team_tag.py  edit_category_tag.py  edit_team_tag.py  manage_tags.py  reopen.py  resolve.py  settings.py  tag_subscribe.py
nephthys/api/: stats.py  stats_range.py  stats_v2.py  ticket.py  tickets.py  user.py
nephthys/commands/: dm_magic_link.py
nephthys/data/: transcript.py
nephthys/database/: enums.py  postgres_enum.py  raw_migration.py  tables.py
nephthys/errors/: errors.py
nephthys/events/: app_home_opened.py  channel_join.py  channel_left.py  message.py  message_creation.py  message_deletion.py
nephthys/graphql/: README.md  models.py
nephthys/macros/: __init__.py  banned.py  faq.py  fraud.py  hackatime.py  hello_world.py  identity.py  lqvotes.py  max_tokens.py  no_money.py  reopen.py  resolve.py  shipcertqueue.py  shipwrights.py  stale.py  team_tag.py  thread.py  trigger_daily_stats.py  trigger_fulfillment_reminder.py  types.py  vote_quality.py  vote_queue.py  votequeue.py
nephthys/options/: category_tags.py  question_tags.py  tags.py  team_tags.py
nephthys/piccolo_migrations/: nephthys_010_init.py  (+8 more)
prisma/: schema.prisma
(+60 files in other folders)
